@@ -4,12 +4,12 @@ package ru.spbau.mit.circuit.logic.graph;
 import org.apache.commons.math3.linear.ArrayRealVector;
 import org.apache.commons.math3.linear.RealVector;
 
+import java.util.ArrayList;
 import java.util.Deque;
-import java.util.LinkedList;
 
 class Cycle {
 
-    private final Deque<Edge> edges = new LinkedList<>();
+    private final ArrayList<Edge> edges = new ArrayList<>();
 
     Cycle(Path path, Edge e) {
         Deque<Edge> pathEdges = path.edges();
@@ -24,26 +24,22 @@ class Cycle {
 
     double getVoltage() {
         double voltage = 0;
-        Node curr = edges.getFirst().to();
+        Node curr = edges.get(0).getAdjacent(edges.get(1));
+        curr = edges.get(0).getPair(curr);
         for (Edge edge : edges) {
-            voltage += edge.getVoltage();
+            voltage += edge.getVoltage() * edge.getDirection(curr);
             curr = edge.getPair(curr);
-        }
-        if (!curr.equals(edges.getFirst().to())) {
-            throw new IllegalArgumentException();
         }
         return voltage;
     }
 
     RealVector getEquation(int m) {
         RealVector equation = new ArrayRealVector(m);
-        Node curr = edges.getFirst().to();
+        Node curr = edges.get(0).getAdjacent(edges.get(1));
+        curr = edges.get(0).getPair(curr);
         for (Edge edge : edges) {
             equation.setEntry(edge.index(), edge.getResistance() * edge.getDirection(curr));
             curr = edge.getPair(curr);
-        }
-        if (!curr.equals(edges.getFirst().to())) {
-            throw new IllegalArgumentException();
         }
         return equation;
     }
